# dedisp

./: .gitignore  CMakeLists.txt  DedispConfig.cmake.in  README.md
example/: gasdev.c  ran1.c  testdedisp.c
src/: DedispPlan.hpp  dedisp.cu  dedisp.h  gpu_memory.hpp  kernels.cuh  transpose.hpp
